--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-div<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -37,9 +37,9 @@ div<!DOCTYPE html>
             </div>
         </div>
 
-        <div class="row" text-center center-block>
+        <div class="row text-center center-block">
             <div class="col-md-12">
-                <h2 id="featured-work">Featured Work</h2>
+                <h2 class="featured-work">Featured Work</h2>
             </div>
 
             <div class="col-md-4">
@@ -48,7 +48,7 @@ div<!DOCTYPE html>
                 </a>
                 <div class="project">
                     <h3 class="project-title">Something</h3>
-                    <a href="www.google.com" class="project-link">Google</a>
+                    <p><a href="www.google.com" class="project-link">Google</a></p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -57,7 +57,7 @@ div<!DOCTYPE html>
                 </a>
                 <div class="project">
                     <h3 class="project-title">Something1</h3>
-                    <a href="www.google.com" class="project-link">Google</a>
+                    <p><a href="www.google.com" class="project-link">Google</a></p>
                 </div>
             </div>
             <div class="col-md-4">
@@ -66,7 +66,7 @@ div<!DOCTYPE html>
                 </a>
                 <div class="project">
                     <h3 class="project-title">Something2</h3>
-                    <a href="www.google.com" class="project-link">Google</a>
+                    <p><a href="www.google.com" class="project-link">Google</a></p> 
                 </div>
             </div>
 
